ansible/roles/anansi/files/iptables.rules
# Generated by iptables-save v1.4.21 on Tue Aug  4 19:03:04 2015
*mangle
:PREROUTING ACCEPT [18284:21682786]
:INPUT ACCEPT [18169:21668297]
:FORWARD ACCEPT [115:14489]
:OUTPUT ACCEPT [13335:2316172]
:POSTROUTING ACCEPT [13378:2325317]
-A POSTROUTING -o lxcbr0 -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill
COMMIT
# Completed on Tue Aug  4 19:03:04 2015
# Generated by iptables-save v1.4.21 on Tue Aug  4 19:03:04 2015
*nat
:PREROUTING ACCEPT [154:11584]
:INPUT ACCEPT [76:5832]
:OUTPUT ACCEPT [1005:63986]
:POSTROUTING ACCEPT [1005:63986]
-A PREROUTING -i lxcbr0 -p udp --dport 53 -j REDIRECT --to-ports 53
-A PREROUTING -i lxcbr0 -p tcp --syn -j REDIRECT --to-ports 9040
-A POSTROUTING -s 10.0.3.0/24 ! -d 10.0.3.0/24 -j MASQUERADE
COMMIT
# Completed on Tue Aug  4 19:03:04 2015
# Generated by iptables-save v1.4.21 on Tue Aug  4 19:03:04 2015
*filter
:INPUT DROP [16169:19002984]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [12711:1606850]
:FLOOD - [0:0]
:LOGGING - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -i lxcbr0 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i lxcbr0 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i lxcbr0 -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i lxcbr0 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i lxcbr0 -p tcp -m tcp --dport 9040 -j ACCEPT
-A INPUT -p tcp --dport 8022 -j ACCEPT
-A INPUT -p tcp --dport 22 -j ACCEPT
-A INPUT -p tcp --dport 80 -j ACCEPT
-A INPUT -p tcp --dport 25 -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
#-A INPUT -j LOG --log-prefix "INPUT Dropped: " --log-level 7

#-A FORWARD -i lxcbr0 -m recent --update --seconds 60 --hitcount 30 --name FLOOD --mask 255.255.255.255 --rsource -j FLOOD
#-A FORWARD -i lxcbr0 -p tcp -m tcp --dport 80 -j ACCEPT
#-A FORWARD -i lxcbr0 -p tcp -m tcp --dport 443 -j ACCEPT
#-A FORWARD -i lxcbr0 -p tcp -m tcp --dport 53 -j ACCEPT
#-A FORWARD -i lxcbr0 -p udp -m udp --dport 53 -j ACCEPT
#-A FORWARD -i lxcbr0 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A FORWARD -i lxcbr0 -j LOGGING
#-A FORWARD -m limit --limit 2/min -j LOG --log-prefix "Forwarding traffic." --log-level 7
#-A FORWARD -o lxcbr0 -j ACCEPT
-A FLOOD -m limit --limit 2/min -j LOG --log-prefix "Dropping flood traffic." --log-level 7
-A FLOOD -j DROP
-A LOGGING -m limit --limit 2/min -j LOG --log-prefix "IPTables Packet Dropped: " --log-level 7
-A LOGGING -j DROP
COMMIT
# Completed on Tue Aug  4 19:03:04 2015
